Testing Instagram embed.

--- a/style.css
+++ b/style.css
@@ -75,6 +75,16 @@ h2 {
   /* font-family: 'Grenze Gotisch', sans-serif; */
   /* font-family: 'Codystar', sans-serif; */
   font-family: 'Henny Penny', sans-serif;
+  font-weight: 900;
+}
+
+h3 {
+  color: #15BF0F;;
+  font-size: 1.2em;
+  font-family: 'Love Ya Like A Sister', sans-serif;
+  /* font-family: 'Grenze Gotisch', sans-serif; */
+  /* font-family: 'Codystar', sans-serif; */
+  /* font-family: 'Henny Penny', sans-serif; */
   font-weight: 300;
 }
 
@@ -96,4 +106,44 @@ p {
   margin: auto;
   text-align: center;
   /* margin: 0 0 40px 0; */
+}
+
+/*  SECTIONS  */
+.section {
+	clear: both;
+	padding: 0px;
+	margin: 0px;
+}
+
+/*  COLUMN SETUP  */
+.col {
+	display: block;
+	float:left;
+	margin: 1% 0 1% 1.6%;
+}
+.col:first-child { margin-left: 0; }
+
+/*  GROUPING  */
+.group:before,
+.group:after { content:""; display:table; }
+.group:after { clear:both;}
+.group { zoom:1; /* For IE 6/7 */ }
+/*  GRID OF TWO  */
+.span_2_of_2 {
+	width: 100%;
+}
+.span_1_of_2 {
+	width: 49.2%;
+}
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+
+@media only screen and (max-width: 480px) {
+	.col { 
+		margin: 1% 0 1% 0%;
+	}
+}
+
+@media only screen and (max-width: 480px) {
+	.span_2_of_2, .span_1_of_2 { width: 100%; }
 }
