--- a/style.css
+++ b/style.css
@@ -62,6 +62,18 @@ body {
   background-color: #400336;
   min-width: fit-content;
   width: 100%;
+  font-weight: sans-serif;
+}
+
+a {
+  color: white;
+  font-family: Arial, sans-serif;
+  text-decoration: none;
+}
+a:hover {
+  color: white;
+  font-family: Arial, sans-serif;
+  text-decoration: underline;
 }
 
 section {
