--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ h2 {
     -8px -8px 12px rgba(255, 255, 255, 0.4),
     8px 8px 12px rgba(0, 0, 0, 0.08);
 }
+
 h3 {
   font-size: 2em;
 
@@ -234,15 +235,15 @@ body {
 #MoF-announcement {
   /* display: inline-flex;
   flex-direction: row; */
-  
+
 }
 
 #MoF-announcement .left-half {
   /* border: 1px solid red; */
   width: 70%;
-  }
-  
-  #MoF-announcement .right-half {
+}
+
+#MoF-announcement .right-half {
   /* border: 1px solid blue; */
   width: 30%;
 }
@@ -252,16 +253,69 @@ body {
   display: flex;
   flex-direction: row;
   width: 1900px;
+}
+
+#MoF-content .left-half {
+  /* border: 1px solid red; */
+  width: 65%;
+  padding: 40px;
+}
+
+#MoF-content .right-half {
+  /* border: 1px solid blue; */
+  width: 30%;
+  padding: 40px;
+}
+
+.animation_bounceShake {
+  animation: bounce_shake 1.5s ease-out infinite;
+  color: #999999;
+}
+
+@keyframes bounce_shake {
+  0% {
+    transform: scale(1, 1) translateY(0);
   }
-  
-  #MoF-content .left-half {
-    /* border: 1px solid red; */
-    width: 65%;
-    padding: 40px;
-    }
-    
-    #MoF-content .right-half {
-      /* border: 1px solid blue; */
-      width: 30%;
-      padding: 40px;
+
+  10% {
+    transform: scale(1.1, .9) translateY(0);
+  }
+
+  30% {
+    transform: scale(.9, 1.1) translateY(-5px);
+  }
+
+  32% {
+    transform: scale(1.2) translateY(-5px);
+  }
+
+  35%,
+  40% {
+    transform: scale(1.2) translateY(-5px) rotate(-1deg)
+  }
+
+  45%,
+  50% {
+    transform: scale(1.2) translateY(-5px) rotate(1deg)
+  }
+
+  60% {
+    transform: scale(1.05, .95) translateY(0);
+  }
+
+  70% {
+    transform: scale(1.05, .95) translateY(0);
+  }
+
+  80% {
+    transform: scale(1, 1) translateY(-3px);
+  }
+
+  95% {
+    transform: scale(1, 1) translateY(0);
+  }
+
+  100% {
+    transform: scale(1, 1) translateY(0);
+  }
 }
